--- a/interactiveDiary/package.json
+++ b/interactiveDiary/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.4",
+    "leader-line-new": "^1.1.9",
     "react": "^18.2.0",
+    "react-archer": "^4.3.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
-    "react-router-dom": "^6.15.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.15.0",
+    "react-xarrows": "^2.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
